# EORB_SLAM

./: .gitignore  CMakeLists.txt  README.md  build_eorb_slam.sh
Examples/Event/: EuRoC.yaml  EuRoC_STEREO.yaml  EvETHZ.yaml  EvETHZ_CALIB.yaml  EvETHZ_EuRoC.yaml  EvETHZ_SLIDER.yaml  EvMVSEC.yaml  EvMVSEC_ETHZ.yaml  EvMVSEC_ETHZ_CALIB.yaml  EvMVSEC_EuRoC.yaml  KITTI_00-02.yaml  TUM.yaml  TUM_RGBD.yaml  TUM_VI_512.yaml  fmt_euroc  fmt_euroc.cpp  fmt_ev_ethz  fmt_ev_ethz.cpp  fmt_ev_mvsec.cpp  fmt_kitti  fmt_kitti.cpp  fmt_tum_rgbd
Examples/Monocular/: EuRoC.yaml  EvETHZ.yaml  EvMVSEC.yaml  KITTI00-02.yaml  TUM1.yaml  TUM2.yaml  TUM3.yaml  mono_euroc.cc  mono_kitti.cc  mono_tum.cc  mono_tum_vi.cc
Examples/Monocular-Inertial/: EuRoC.yaml  EvETHZ.yaml  mono_inertial_euroc.cc  mono_inertial_tum_vi.cc
Examples/Monocular/EvETHZ_TimeStamps/: hdr_boxes.txt  shapes_6dof.txt  slider_depth.txt
Examples/Monocular/EvMVSEC_TimeStamps/: indoor_flying1.txt
Examples/RGB-D/: TUM2.yaml  TUM3.yaml  rgbd_tum.cc
Examples/ROS/EORB_SLAM/: CMakeLists.txt  package.xml
Examples/ROS/ORB_SLAM3/src/: ros_mono_inertial.cc  ros_stereo_inertial.cc
Examples/Stereo/: KITTI03.yaml  KITTI04-12.yaml  TUM_512.yaml  stereo_euroc.cc  stereo_kitti.cc  stereo_tum_vi.cc
Examples/Stereo-Inertial/: stereo_inertial_euroc.cc  stereo_inertial_tum_vi.cc
docker/: Dockerfile  docker-compose.yaml
evaluation/: associate.py  evaluate_ate_scale.py
evaluation/eorb-slam-utils/: change_pose_dir.py  correct_disconn_ev_frames.py  my_eval_ape.py  my_eval_rpe.py  my_eval_uslam.py
evaluation/eorb-slam-utils/visualization/: draw_pose_err_stats.py  viz_pose_gt_est_ap.py  viz_pose_gt_est_ap_comp.py  viz_pose_gt_est_mixed.py  viz_tests.py  viz_tools.py
evaluation/kitti-odom-eval/result/example_0/: result.txt
evaluation/kitti-odom-eval/result/example_0/errors/: 09.txt  10.txt
evaluation/my_utils/: gen_test_traj.py  mf_manip.py  mmisc.py  move_files.py  my_eval_uslam_rpe.py
evaluation/tum_tools/: evaluate_ate.py  evaluate_rpe.py
evaluation/visualization/: viz_comp_pose_map.py  viz_merge_maps.py  viz_pose_gt_est_rp.py  viz_pose_map.py  viz_rpe_dist_uslam.py  viz_tools.py
include/: Atlas.h  Converter.h  Frame.h  G2oTypes.h  KeyFrame.h  LoopClosing.h  MLPnPsolver.h  Map.h  MapDrawer.h  MapPoint.h  MixedFrame.h  MixedKeyFrame.h  MixedMatcher.h  ORBextractor.h  ORBmatcher.h  OptimizableTypes.h  Optimizer.h  System.h  Tracking.h  TwoViewReconstruction.h  Viewer.h  compiler_options.h
include/CameraModels/: GeometricCamera.h  KannalaBrandt8.h  Pinhole.h
include/Event/: EvAsynchTracker.h  EvAsynchTrackerU.h  EvBaseTracker.h  EvImBuilder.h  EvLocalMapping.h  EvOptimizer.h  EvSynchTracker.h  EvSynchTrackerU.h  EvTrackManager.h  EventConversion.h  EventData.h  EventFrame.h  EventLoader.h  KLT_Tracker.h
include/IMU/: IMU_Manager.h  ImuTypes.h
include/ROS/: RosBagStore.h
include/Utils/: DataStore.h  FeatureTrack.h  KittiLoader.h  MyCalibrator.h  MyDataTypes.h  MyFrameDrawer.h  MyOptimTypes.h  MyOptimizer.h  MyParameters.h  MyRandGen.h  MyYamlParser.h  TumRgbdLoader.h  Visualization.h
scripts/: euroc_batch.sh  euroc_examples.sh  ev_ethz_batch.sh  ev_ethz_examples.sh  ev_mvsec_batch.sh  ev_mvsec_examples.sh  ev_test_examples.sh
src/: Atlas-1.cc  Atlas.cc  Converter.cc  Frame-1.cc  Frame.cc  FrameDrawer.cc  G2oTypes.cc  Initializer.cc  KeyFrame-1.cc  KeyFrame.cc  LocalMapping-1.cc  LocalMapping.cc  LoopClosing-1.cc  LoopClosing.cc  MLPnPsolver.cpp  Map-1.cc  Map.cc  MapDrawer.cc  MapPoint-1.cc  MapPoint.cc  MixedFrame.cpp  MixedKeyFrame.cpp  MixedMatcher.cpp  ORBextractor-1.cc  ORBextractor.cc  ORBmatcher.cc  OptimizableTypes.cpp  Optimizer-1.cc  Optimizer.cc  PnPsolver.cc  Sim3Solver.cc  System-1.cc  System.cc  Tracking-1.cc  Tracking.cc  TwoViewReconstruction.cc  Viewer-1.cc  Viewer.cc
src/CameraModels/: KannalaBrandt8.cpp  Pinhole.cpp
src/Event/: EvAsynchTracker-1.cpp  EvAsynchTracker.cpp  EvAsynchTrackerU-1.cpp  EvAsynchTrackerU.cpp  EvBaseTracker.cpp  EvImBuilder-1.cpp  EvImBuilder.cpp  EvLocalMapping-1.cpp  EvLocalMapping.cpp  EvOptimizer-1.cpp  EvOptimizer.cpp  EvSynchTracker-1.cpp  EvSynchTracker.cpp  EvSynchTrackerU-1.cpp  EvSynchTrackerU.cpp  EvTrackManager-1.cpp  EvTrackManager.cpp  EventConversion.cc  EventData.cpp  EventFrame-1.cpp  EventFrame.cpp  EventLoader.cpp  KLT_Tracker-1.cpp  KLT_Tracker.cpp
src/IMU/: IMU_Manager.cpp  ImuTypes.cc
src/ROS/: RosBagStore.cpp
src/Utils/: DataStore.cpp  FeatureTrack-1.cpp  FeatureTrack.cpp  KittiLoader.cpp  MyCalibrator.cpp  MyDataTypes-1.cpp  MyDataTypes.cpp  MyFrameDrawer-1.cpp  MyFrameDrawer.cpp  MyOptimTypes.cpp  MyOptimizer.cpp  MyParameters.cpp  MyRandGen.cpp  MyYamlParser.cpp  TumRgbdLoader.cpp  Visualization.cpp
